@@ -32,6 +32,7 @@ void cmd_crvar(void);
 void cmd_param(void);
 int cmd_exit(void);
 void cmd_let(int);
+void cmd_packed_let();
 void cmd_dim(int);
 void cmd_redim(void);
 void cmd_ladd(void);
